# ai-tran-cli

./: .env.example  .gitignore  BUILD.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  release.yml
doc/: prd.md
scripts/: check-ci.sh  release.sh
src/: main.rs
src/app/: app.rs  message.rs  mod.rs
src/events/: handler.rs  mod.rs
src/providers/: mod.rs  openai.rs
src/ui/: chat.rs  input.rs  layout.rs  mod.rs  statusbar.rs
