[package]
name = "ai-tran-cli"
version = "0.1.0"
edition = "2021"
authors = ["AI Translation CLI Team"]
description = "A high-performance AI-powered translation CLI tool with streaming support"
license = "MIT"
repository = "https://github.com/your-org/ai-tran-cli"
keywords = ["translation", "cli", "tui", "ai", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "ai-tran-cli"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP Client (streaming support)
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
anyhow = "1"
thiserror = "1"

# Async Traits
async-trait = "0.1"

# Clipboard
arboard = "3.3"

# Configuration
dotenv = "0.15"
config = "0.14"
dirs = "5"

# Time
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link Time Optimization
codegen-units = 1     # Better optimization
strip = true          # Strip symbols
panic = "abort"       # Smaller binary
